<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>



        <variable
            name="vm"
            type="com.powercore.hydrahome.ui.activity.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.login.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="376dp">

            <com.youth.banner.Banner
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="376dp" />

            <com.youth.banner.indicator.DrawableIndicator
                android:id="@+id/indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="280dp"
                app:normal_drawable="@mipmap/indicator_normal"
                app:selected_drawable="@mipmap/indicator_selected"
                tools:ignore="MissingClass" />
        </RelativeLayout>

        <com.ruffian.library.widget.RLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="300dp"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:background_normal="@color/white"
            app:corner_radius_top_left="@dimen/dp_40"
            app:corner_radius_top_right="@dimen/dp_40">

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="Login to"
                android:textColor="#ff121212"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="your account"
                android:textColor="#ff121212"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/account"
                android:textColor="#ff121212"
                android:textSize="15sp"
                android:textStyle="bold" />

            <com.ruffian.library.widget.RLinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_marginTop="12dp"
                app:background_normal="@color/color_f8"
                app:corner_radius="25dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@mipmap/ic_user_icon" />

                <EditText
                    android:id="@+id/edit_account"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical|start"
                    android:hint="@string/please_enter_your_account"
                    android:singleLine="true"
                    android:text="@={vm.loginReq.account}"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:padding="5dp"
                    android:src="@mipmap/icon_close_eye"
                    android:visibility="invisible" />

            </com.ruffian.library.widget.RLinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textColor="#ff121212"
                android:textSize="15sp"
                android:textStyle="bold" />

            <com.ruffian.library.widget.RLinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                app:background_normal="@color/color_f8"
                app:corner_radius="25dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@mipmap/ic_user_icon" />

                <EditText
                    android:id="@+id/edit_pwd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical|start"
                    android:hint="@string/please_enter_your_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text="@={vm.loginReq.password}"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/login_is_show_pwd"
                    android:layout_width="29dp"
                    android:layout_height="29dp"
                    android:layout_marginEnd="5dp"
                    android:padding="5dp"
                    android:src="@mipmap/icon_close_eye" />

            </com.ruffian.library.widget.RLinearLayout>

            <TextView
                android:id="@+id/btn_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="12dp"
                android:text="@string/forgot_password"
                android:textColor="#ff121212"
                android:textSize="15sp"
                android:textStyle="bold" />

            <com.lihang.ShadowLayout
                android:id="@+id/mShadowLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hl_centerColor="#ffc01818"
                app:hl_cornerRadius="25dp"
                app:hl_shadowColor="#4da70d0d"
                app:hl_shadowHiddenTop="false"
                app:hl_shadowLimit="20dp">

                <TextView
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffc01818"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="Login"
                    android:onClick="@{(v)->vm.login()}"
                    android:textColor="#ffffffff"
                    android:textSize="18sp" />
            </com.lihang.ShadowLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_registered_yet"
                    android:textColor="#ff121212"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_4"
                    android:text="@string/create_an_account"
                    android:textColor="@color/color_theme"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </com.ruffian.library.widget.RLinearLayout>


    </RelativeLayout>
</layout>