<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.powercore.hydrahome.ui.activity.family.add.NewHouseholdViewModel" />
    </data>


    <com.ruffian.library.widget.RConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:background_normal="@color/white"
        app:corner_radius_top_left="10dp"
        app:corner_radius_top_right="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_maximum_home_load_power"
            android:textColor="#ff163223"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ruffian.library.widget.REditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:hint="0"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="15sp"
            android:inputType="numberDecimal"
            app:background_normal="#F7F8F8"
            app:border_color_normal="#AAAAAA"
            app:border_width_normal="1dp"
            app:corner_radius="6dp"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/input"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="@id/input"
            app:layout_constraintBottom_toBottomOf="@id/input"
            android:text="Amps"
            android:textColor="#ff163223"
            android:textSize="15sp"
            />

        <com.ruffian.library.widget.RTextView
            android:id="@+id/btn_cancel"
            android:layout_width="140dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/txt_btn_cancel"
            app:border_color_normal="@color/border_grey_color"
            app:border_width_normal="1dp"
            app:corner_radius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/input"
            app:layout_constraintTop_toBottomOf="@id/input"
            app:text_color_normal="@color/txt_grey_color" />

        <com.ruffian.library.widget.RTextView
            android:id="@+id/btn_confirm"
            android:layout_width="140dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/txt_btn_ok"
            app:background_normal="@color/theme_color"
            app:corner_radius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/input"
            app:layout_constraintTop_toBottomOf="@id/input"
            app:text_color_normal="@color/white" />

    </com.ruffian.library.widget.RConstraintLayout>
</layout>