<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.powercore.hydrahome.ui.activity.family.add.NewHouseholdViewModel" />
    </data>


    <com.ruffian.library.widget.RConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="330dp"
        app:background_normal="@color/white"
        app:corner_radius_top_left="10dp"
        app:corner_radius_top_right="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/night_rate_tariff_p_kWh"
            android:textColor="#ff163223"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ruffian.library.widget.REditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:hint="0"
            android:inputType="numberDecimal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="15sp"
            app:background_normal="#F7F8F8"
            app:border_color_normal="#AAAAAA"
            app:border_width_normal="1dp"
            app:corner_radius="6dp"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="p/kWh"
            android:textColor="#ff163223"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/input"
            app:layout_constraintEnd_toEndOf="@id/input"
            app:layout_constraintTop_toTopOf="@id/input" />

        <TextView
            android:id="@+id/hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="16dp"
            android:text="The time range your night tariff operates"
            android:textColor="#ff8f9392"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@+id/input" />

        <com.ruffian.library.widget.RTextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="25dp"
            android:drawableEnd="@drawable/ic_arrow_right_grey"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:hint="00:00 – 00:00"
            android:textColor="#ff333333"
            android:textSize="15sp"
            app:background_normal="#F7F8F8"
            app:border_color_normal="#AAAAAA"
            app:border_width_normal="1dp"
            app:corner_radius="6dp"
            app:layout_constraintTop_toBottomOf="@+id/hint" />

        <com.ruffian.library.widget.RTextView
            android:id="@+id/btn_cancel"
            android:layout_width="140dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/txt_btn_cancel"
            app:border_color_normal="@color/border_grey_color"
            app:border_width_normal="1dp"
            app:corner_radius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/time"
            app:layout_constraintTop_toBottomOf="@id/time"
            app:text_color_normal="@color/txt_grey_color" />

        <com.ruffian.library.widget.RTextView
            android:id="@+id/btn_confirm"
            android:layout_width="140dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/txt_btn_confirm"
            app:background_normal="@color/theme_color"
            app:corner_radius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/time"
            app:layout_constraintTop_toBottomOf="@id/time"
            app:text_color_normal="@color/white" />

    </com.ruffian.library.widget.RConstraintLayout>
</layout>